# system-tools

cports/main/eartag/: template.py
cports/main/python-aiofiles/: template.py
cports/main/python-aiohttp/: template.py
cports/main/python-frozenlist/: template.py
cports/main/python-multidict/: template.py
cports/main/python-xxhash/: template.py
cports/user/doxx/: template.py
cports/user/keypunch/: template.py
misc/starship/: README.md
misc/starship/docs/: faq.md
notification/fnott/: .gitignore  .gitmodules  .woodpecker.yaml  CHANGELOG.md  PKGBUILD  README.md  char32.c  char32.h  config.c  config.h  ctrl-protocol.h  ctrl.c  ctrl.h  dbus.c  dbus.h  fnott.desktop  fnott.ini  fnottctl.c  generate-version.sh  icon.c  icon.h  log.c  main.c  meson.build  meson_options.txt  notification.c  notification.h  png.c  shm.c  spawn.c  spawn.h  svg.c  uri.c  uri.h  wayland.c  wayland.h  xdg.c  xdg.h
notification/fnott/.builds/: alpine-x64.yml  freebsd-x64.yml
notification/fnott/completions/: meson.build
notification/fnott/completions/fish/: fnott.fish  fnottctl.fish
notification/fnott/completions/zsh/: _fnott  _fnottctl
notification/fnott/dbus/: fnott.service.in  meson.build
notification/fnott/doc/: fnott.1.scd  fnott.ini.5.scd  fnottctl.1.scd  meson.build
notification/fnott/systemd/: fnott.service.in  meson.build
swww/common/src/compression/comp/: sse2.rs
wallpaper/swww/common/src/compression/decomp/: ssse3.rs
